fixed tileinfo heading double border

--- a/procedural-generation/index.css
+++ b/procedural-generation/index.css
@@ -55,7 +55,7 @@ body {
     margin: 0;
     padding: 15px;
     background: #FFFFFF;
-    border: 2px solid black;
+    border-bottom: 2px solid black;
 }
 
 #tileInfoDiv {
